Overflow table fix.

--- a/css/teriock.css
+++ b/css/teriock.css
@@ -1065,7 +1065,8 @@
 }
 .teriock .ab-main .ab-section-container {
   margin: 0.5em;
-  overflow: auto;
+  overflow-x: auto;
+  overflow-y: hidden;
 }
 .teriock .ab-main .ab-section-container.faded {
   opacity: 0.5;
