--- a/style/components/_ability.scss
+++ b/style/components/_ability.scss
@@ -464,7 +464,8 @@
   .ab-section-container {
     // width: 100%;
     margin: 0.5em;
-    overflow: auto;
+    overflow-x: auto;
+    overflow-y: hidden;
     &.faded {
       opacity: 0.5;
     }
